--- a/indexStyle.css
+++ b/indexStyle.css
@@ -39,6 +39,11 @@ h1.navigation {
     text-align: center;
 }
 
+.content{
+     text-align: center;
+    padding-top: 300px;
+}
+
 /* image grid css */
 {
   box-sizing: border-box;
@@ -49,14 +54,14 @@ body {
   font-family: Arial;
 }
 
-/* The grid: Four equal columns that floats next to each other */
+
 .column {
   float: left;
   width: 25%;
   padding: 10px;
 }
 
-/* Style the images inside the grid */
+
 .column img {
   opacity: 0.8; 
   cursor: pointer; 
@@ -66,20 +71,20 @@ body {
   opacity: 1;
 }
 
-/* Clear floats after the columns */
+
 .row:after {
   content: "";
   display: table;
   clear: both;
 }
 
-/* The expanding image container */
+
 .container {
   position: relative;
   display: none;
 }
 
-/* Expanding image text */
+
 #imgtext {
   position: absolute;
   bottom: 15px;
@@ -88,7 +93,6 @@ body {
   font-size: 20px;
 }
 
-/* Closable button inside the expanded image */
 .closebtn {
   position: absolute;
   top: 10px;
