--- a/indexStyle.css
+++ b/indexStyle.css
@@ -44,6 +44,16 @@ h1.navigation {
     padding-top: 300px;
 }
 
+/* List Styles */
+ul, ol {
+    margin-left: 20px;
+    padding-left: 10px;
+    text-align: center;
+}
+
+ul li, ol li {
+    margin-bottom: 5px;
+    text-align: center;
 /* image grid css */
 {
   box-sizing: border-box;
