--- a/indexStyle.css
+++ b/indexStyle.css
@@ -48,7 +48,6 @@ h1.navigation {
 {
   box-sizing: border-box;
 }
-
 body {
   margin: 0;
   font-family: Arial;
@@ -89,7 +88,7 @@ body {
   position: absolute;
   bottom: 15px;
   left: 15px;
-  color: white;
+  color: black;
   font-size: 20px;
 }
 
@@ -97,7 +96,7 @@ body {
   position: absolute;
   top: 10px;
   right: 15px;
-  color: white;
+  color: black;
   font-size: 35px;
   cursor: pointer;
 }
