--- a/indexStyle.css
+++ b/indexStyle.css
@@ -44,54 +44,22 @@ h1.navigation {
     padding-top: 300px;
 }
 
-{
-  box-sizing: border-box;
-}
-
-body {
-  margin: 0;
-  font-family: Arial;
-}
-
-.column {
+div.gallery {
+  margin: 5px;
+  border: 1px solid #ccc;
   float: left;
-  width: 25%;
-  padding: 10px;
+  width: 180px;
 }
 
-.column img {
-  opacity: 0.8; 
-  cursor: pointer; 
+div.gallery:hover {
+  border: 1px solid #777;
 }
 
-.column img:hover {
-  opacity: 1;
+div.gallery img {
+  width: 100%;
+  height: auto;
 }
 
-.row:after {
-  content: "";
-  display: table;
-  clear: both;
-}
-
-.container {
-  position: relative;
-  display: none;
-}
-
-#imgtext {
-  position: absolute;
-  bottom: 15px;
-  left: 15px;
-  color: white;
-  font-size: 20px;
-}
-
-.closebtn {
-  position: absolute;
-  top: 10px;
-  right: 15px;
-  color: white;
-  font-size: 35px;
-  cursor: pointer;
-}
+div.desc {
+  padding: 15px;
+  text-align: center;
