--- a/indexStyle.css
+++ b/indexStyle.css
@@ -30,6 +30,10 @@ h1{
     color: white
 }
 
+img{
+    align-items: center; 
+}
+    
 h2{
     text-align: center;
     border: black;
@@ -47,8 +51,8 @@ p {
 
 .body{
         display: flex;
-        justify-content: center; /* Centers content horizontally */
-        align-items: center; /* Centers content vertically */
+        justify-content: center; 
+        align-items: center; 
 }
 
   .gallery {
