--- a/indexStyle.css
+++ b/indexStyle.css
@@ -45,6 +45,11 @@ p {
         font-size: 25px;
       }
 
+.centerbody img {
+    align-items: center;
+    margin-bottom: 20px;
+}
+
 .body{
         display: flex;
         justify-content: center; /* Centers content horizontally */
