--- a/indexStyle.css
+++ b/indexStyle.css
@@ -30,6 +30,15 @@ h1{
     color: white
 }
 
+.centerbody {
+  display: flex;
+  flex-direction: column; /* Stack items vertically */
+  align-items: center; /* Center horizontally */
+  justify-content: center; /* Center vertically */
+}
+
+.centerbody img {
+  margin-bottom: 20px;
 h2{
     text-align: center;
     border: black;
@@ -45,10 +54,6 @@ p {
         font-size: 25px;
       }
 
-.centerbody img {
-    align-items: center;
-    margin-bottom: 20px;
-}
 
 .body{
         display: flex;
