--- a/exhibit4style.css
+++ b/exhibit4style.css
@@ -57,6 +57,7 @@ h1.navigation {
   
   .container {
     display: grid;
+    text-align: center;
     grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
     gap: 15px;
     margin-top: 20px;
