--- a/indexStyle.css
+++ b/indexStyle.css
@@ -30,8 +30,8 @@ h1{
     color: white
 }
 
-img{ 
-     float: center;
+.centerbody{ 
+     text-align: center;
 }
 
 h2{
@@ -46,7 +46,7 @@ p {
         width: 100%; 
         line-height: 1.5; 
         padding-bottom: 5%; 
-        font-size: 17px;
+        font-size: 20px;
       }
 
 
@@ -71,7 +71,6 @@ p {
     display: flex;
     flex-direction: column;
     align-items: center;
-    border: 1px solid #ddd;
     border-radius: 10px;
     padding: 10px;
     background-color: #FFFDDF; 
