--- a/indexStyle.css
+++ b/indexStyle.css
@@ -52,8 +52,8 @@ p {
 
 .body{
         display: flex;
-        justify-content: center; /* Centers content horizontally */
-        align-items: center; /* Centers content vertically */
+        justify-content: center; 
+        align-items: center; 
 }
 
   .gallery {
