--- a/exhibit4style.css
+++ b/exhibit4style.css
@@ -51,6 +51,7 @@ h1.navigation {
     display: flex;
     flex-direction: column;
     align-items: center;
+    text-align: center;
     justify-content: flex-start;
     padding: 20px;
   }
