--- a/ramonastyles.css
+++ b/ramonastyles.css
@@ -1,38 +1,36 @@
 *{
     background-color: #FFFDDF;
-}
+font-family: 'Garamond', serif;}
 
 h2{
     text-align: center;
-    border: black;
-    font-family: 'Garamond', serif;
+    border: black;}
     
-}
-.navigation {
-        border-bottom: solid rgb(131, 0, 0);
-        overflow: hidden;
-        font-family: 'Garamond', serif;
-        
-    }
-
-h1.navigation {
+h1{
     text-align: center;
     font-size: 48px;
-    }
-    .navigation a {
-        float: left;
-        text-align: center;
-        padding: 10px;
-        color: rgb(151, 0, 0);
-    }
+    }  
+.navigation {
+    border-bottom: solid rgb(131, 0, 0);
+    overflow: hidden;
+}
+
+.navigation a {
+    float: left;
+    text-align: center;
+    padding: 10px;
+    color: rgb(151, 0, 0);
+}
+
 .navigation a:hover {
-        background-color: grey;
-        color: black;
-    }
+    background-color: rgb(131, 0, 0);
+    color: white;
+}
+
 .navigation a.active {
-        background-color: rgb(131, 0, 0);
-        color: white
-    }
+    background-color: rgb(131, 0, 0);
+    color: white
+}
 
 .centerbody{
     text-align: center;
@@ -51,11 +49,6 @@ h1.navigation {
     transform: scale(1.2); /* Scales the image by 1.2 times */
   }
 
-
-.navigation a:hover {
-    background-color: grey;
-    color: black;
-}
 
 .column {
     float: left;
@@ -94,102 +87,6 @@ img {
     padding-bottom: 100px;
     font-size: 23px;
 }
-
-div.gallery {
-    font-size: 0;
-    position:relative;
-    width: 1900px;
-    margin: 0, auto;
-    text-align: center;
-}
-
-div.gallery img {
-    width: 400px;
-    height: 400px;
-    margin: auto;
-    padding-right: 40px;
-    padding-bottom: 15px;
-}
-
-div.gallery img:hover {
-    visibility: visible;
-    opacity: 90%; 
-}
-
-#desc1 {
-    position: relative;
-    left: 70px;
-    width: 360px;
-    top: 20px;
-    text-align: justify;
-    line-height: 30px;
-    border-style: ridge;
-    border-width: 1px;
-    border-width: 10px;
-    background-color: #E3E3E3;
-    padding: 10px;
-}
-
-#desc1 h2{
-background-color: transparent;
-padding-top: 10px;
-line-height: 50px;
-}
-
-#desc2 {
-    position: relative;
-    left: 510px;
-    width: 360px;
-    top: -363px;
-    text-align: justify;
-    line-height: 30px;
-    border-style: ridge;
-    border-width: 1px;
-    border-width: 10px;
-    background-color: #E3E3E3;
-    padding: 10px;
-}
-#desc2 h2{
-    background-color: transparent;
-    padding-top: 10px;
-    line-height: 50px;
-    }
-#desc3 {
-    position: relative;
-    left: 950px;
-    width: 360px;
-    top: -726.5px;
-    text-align: justify;
-    line-height: 30px;
-    border-style: ridge;
-    border-width: 1px;
-    border-width: 10px;
-    background-color: #E3E3E3;
-    padding: 10px;
-}
-#desc3 h2{
-    background-color: transparent;
-    padding-top: 10px;
-    line-height: 50px;
-    }
-#desc4 {
-    position: relative;
-    left: 1390px;
-    width: 360px;
-    top: -1109.5px;
-    text-align: justify;
-    line-height: 30px;
-    border-style: ridge;
-    border-width: 1px;
-    border-width: 10px;
-    background-color: #E3E3E3;
-    padding: 10px;
-}
-#desc4 h2{
-    background-color: transparent;
-    padding-top: 10px;
-    line-height: 50px;
-    }
 footer{
     font-size: x-small;
     bottom: 0%;
