--- a/exhibit4style.css
+++ b/exhibit4style.css
@@ -1,40 +1,40 @@
 *{
     background-color: #FFFDDF;
-}
+font-family: 'Garamond', serif;}
 
 h2{
     text-align: center;
     border: black;
-    font-family: 'Garamond', serif;
+    
     padding: 10px;
     
 }
-.navigation {
-        border-bottom: solid rgb(131, 0, 0);
-        overflow: hidden;
-        font-family: 'Garamond', serif;
-        
-    }
+h1{
+  text-align: center;
+  font-size: 48px;
+}
 
-h1.navigation {
-    text-align: center;
-    font-size: 48px;
-    }
+.navigation {
+  border-bottom: solid rgb(131, 0, 0);
+  overflow: hidden;
+}
 
 .navigation a {
-        float: left;
-        text-align: center;
-        padding: 10px;
-        color: rgb(151, 0, 0);
-    }
+  float: left;
+  text-align: center;
+  padding: 10px;
+  color: rgb(151, 0, 0);
+}
+
 .navigation a:hover {
-        background-color: grey;
-        color: black;
-    }
+  background-color: rgb(131, 0, 0);
+  color: white;
+}
+
 .navigation a.active {
-        background-color: rgb(131, 0, 0);
-        color: white
-    }
+  background-color: rgb(131, 0, 0);
+  color: white
+}
 
 .centerbody{
     text-align: center;
